adopted to java 11